🐛 Issue #40: Search too long for side nav component

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -577,6 +577,7 @@ span.toc * {
   text-decoration: underline;
 }
 
-.react-spectrum-SideNav {
+.react-spectrum-SideNav,
+.spectrum-Search-input {
   width: 208px !important;
 }
